--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "webpack": "^4.35.3",
+    "htmlparser2": "^3.10.1",
+    "webpack": "^4.40.0",
     "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
@@ -26,11 +27,13 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack-dev-server": "^3.7.2",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^6.1.2"
   }
 }
